[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "easyteleop-backend"
version = "0.1.0"
description = "EasyTeleop系统的Python后端，负责设备控制和状态管理"
readme = "README.md"
authors = [
    {name = "EasyTeleop Team"}
]
license = {text = "MIT"}
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]
requires-python = ">=3.8"
dependencies = [
    "fastapi>=0.68.0",
    "uvicorn>=0.15.0",
    "websockets>=10.0",
    "paho-mqtt>=1.6.1",
    "pydantic>=1.8.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=6.0",
    "black>=21.0",
    "flake8>=3.9.0",
]

[project.scripts]
easyteleop-backend = "backend:main"
easyteleop-mqtt-sync = "run_mqtt_sync:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["*"]
namespaces = false